--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -2,30 +2,62 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-
+    align-items: center; 
     width: 100vw;
-    background-color: #000;
-    height: 20vh;
-
+    background-color: #feffc3;
+    height: 50vh;
+    gap:2vh;
+   padding: 1vh;
+   font-size: clamp(15px,2vw,30px);
+      
 }
 
-
+.mainFooter{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #350b59;
+    width: 40vw;
+    border-radius: 2vw;
+    height: 10vh;
+}
 
 .btext{
-    background-color: #FFF;
-    padding: 1vh;
+    margin: 0;
     text-align: center;
-    
-    font-size: 20px;
+    color: #feffc3;
+    font-size: clamp(10px,2vw,10px);
     border-radius: 5px;
 }
 
 .ftext{
+    margin: 0;
     color: #FFF;
     padding: 1vh;
     text-align: center;
-    
-    font-size: 15px;
+    font-size: clamp(5px,2vw,10px);
     border-radius: 5px;
+}
+
+.hFooter{
+    text-align: center;
+    color:#350b59;
+    margin:0;
+    padding: 0;
+}
+
+.ftext2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    color:#350b59;
+    padding: 0;
+    text-align: center;
+    font-size: clamp(5px,2vw,10px);
+    border-radius: 5px;
+    font-weight: 600;
+    text-transform: uppercase;
+
 }
