--- a/public/index.css
+++ b/public/index.css
@@ -5,11 +5,13 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    min-height: 100vh;
     width: 100vw;
     margin: 0;
     padding-top: 1vh;
     font-family: 'Poppins', sans-serif;
-    background-color: #ed2657;
+    background: rgb(237,38,87);
+    background: linear-gradient(180deg, rgba(237,38,87,1) 0%, rgba(254,255,195,1) 100%);
     overflow-x: hidden;
 }
 
@@ -19,7 +21,7 @@ body{
 }
 
 ::-webkit-scrollbar-track {
-    background-color: #ed2657;
+    background-color: #b00731;
 }
 
 ::-webkit-scrollbar-thumb {
