--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,17 @@
 a{
     text-decoration: none;
+   
 }
 
+.app-wrapper {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    margin: 0;
+    width: 100vw;
+
+  }
+
+.footer{
+    margin-top: auto;
+}
