--- a/src/components/section/sectionApp.css
+++ b/src/components/section/sectionApp.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    max-width: 100vw;
+    width: 100vw;
     min-height: 60vh;
     background-color: #350b59;
 }
@@ -13,14 +13,17 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100vw;
+    min-width: 60vw;
     min-height: 60vh;
-    background-color: #ed2657;
-    border-top-left-radius: 4vw ;
-    border-top-right-radius: 4vw ;
+    background: rgb(237,38,87);
+    background: linear-gradient(180deg, rgba(237,38,87,1) 0%, rgba(254,185,0,1) 100%);
+    border-radius: 4vw ;
+    padding: 1vh;
+    margin: 2vh;
 }
 
 .titleSection{
+    text-align: center;
     color:#feffc3;
     text-transform: uppercase;
     font-weight: 700;
@@ -36,6 +39,7 @@
     font-weight: 500;  
     width: 60vw;
     background-color: #feffc3;
+    box-shadow: 5px 5px #350b59;
     color:#350b59;
     font-size: clamp(10px,4vw,25px);
     
@@ -46,13 +50,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-wrap: wrap;
     width: 60vw;
     margin-left:auto;
     margin-right:auto;
     color: #feffc3;
     font-size: clamp(10px,4vw,25px);
     text-transform: uppercase;
+    gap:2vh;
 }
 
 
@@ -63,11 +67,12 @@
     padding: 1vh;
     border-radius: 6vw;
     background-color: #feffc3;
+    box-shadow: 5px 5px #350b59;
     width: 40%;
 }
 
 .textSection2{
-    text-align: center;
+    text-align: left;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -76,7 +81,8 @@
 
 .imgAvis{
     border-radius: 10px;
-    width: 12%;
+    width: 10vw;
+    margin: 1vh;
 }
 
 .avis{
@@ -92,15 +98,23 @@
     font-size: clamp(10px,2vw,25px);
 }
 
+.logAvis{
+    display: flex;
+    flex-direction: row;
+}
+
 .button{
 display: flex;
 justify-content: center;
 align-items: center;    
 padding: 1vh;   
-border: 1px solid #feffc3;
+border: 2px solid #350b59;;
 border-radius: 2vw;
 font-size: clamp(10px,2vw,25px);
+font-weight: 600;
 cursor: pointer;
+color: #350b59;
+margin: 1vh;
 }
 
 .button:hover{
