affichage de la liste des annonces , et details de l'annonce avec le bouton commander

--- a/src/components/dashboard/dashboard.css
+++ b/src/components/dashboard/dashboard.css
@@ -48,7 +48,7 @@ padding: 2vh;
 
 .onglet{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: flex-start;
     align-items: flex-start;
     text-transform: uppercase;
