--- a/src/components/dashboard/dashboard.css
+++ b/src/components/dashboard/dashboard.css
@@ -1,3 +1,13 @@
+input::placeholder {
+    font-weight: 500;
+    opacity: 1;
+    color: #FFF;
+    font-family: sans-serif;
+    font-size: medium;
+  }
+  
+
+
 .mainDB{
     
     gap:2vh;
@@ -37,9 +47,8 @@ padding: 2vh;
 
 .space{
     display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-     align-items: flex-start;
+    justify-content: center;
+     align-items: center;
     background-color: #FFf;
     width: 100vw;
     min-height: 60vh;
@@ -53,9 +62,6 @@ padding: 2vh;
     align-items: flex-start;
     text-transform: uppercase;
     padding: 2vh;
-    margin-left: auto;
-    margin-right: auto;
-    width: 90vw;
     height: 100%;
     
 }
@@ -65,4 +71,72 @@ padding: 2vh;
     border-radius: 5px;
     color: #FFf;
     padding: 1vh;
+}
+
+.addAd{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    
+}
+.formAd{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap:2vh;
+}
+
+.field{
+    border: none;
+    background-color: #350b59;
+    color: #FFF;
+    width: 40vw;
+    height: 5vh;
+   border-radius: 10px;
+}
+
+select{
+    border: none;
+    background-color: #350b59;
+    color: #FFF;
+    width: 40vw;
+    height: 5vh;
+   border-radius: 10px;
+
+}
+
+.buttonAd{
+    border: none;
+    width: 8vw;
+    background-color: #d62451;
+    color: #FFf;
+    font-size: large;
+    padding: 1vh;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.imgAccount{
+    width: 30vw;
+    background-color: #d62451;
+    border-radius: 10px;
+    box-shadow: 5px 5px  #feffc3;;
+
+}
+
+
+.done{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: fit-content;
+    background-color: mediumseagreen;
+    color:#FFf;
+    font-weight: 600;
+    text-transform: uppercase;
+    border-radius: 10px;
+    padding: 1vh;
+
 }
