--- a/src/view/ticketpage/ticketpage.css
+++ b/src/view/ticketpage/ticketpage.css
@@ -55,3 +55,22 @@ text-align: center;
     color: #fFF;
     font-weight: 600;
 }
+
+.goToPayment{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1vh;
+    background-color: #2f114b;
+    text-transform: uppercase;
+    color:#ebeaea;
+    font-weight: 500;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.goToPayment:hover{
+    background-color: #4f3969;
+    color:#feffc3;
+}
