--- a/public/index.css
+++ b/public/index.css
@@ -15,6 +15,11 @@ body{
     overflow-x: hidden;
 }
 
+input::placeholder{
+    opacity: 1;
+    color: black;
+}
+
 
 ::-webkit-scrollbar {
     width: 12px; 
