--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -22,7 +22,7 @@
 .header{
 
     display: flex;
-    min-width: 90vw;
+    max-width: 90vw;
     justify-content: space-around;
     align-items: center;
     background-color: #d62451;
@@ -32,7 +32,6 @@
     margin-right:auto;
     border-radius: 10px;
     padding: 10px;
-    z-index: 99;
 }
 
 .mainSearch {
